Fixes text-align on select on ListaPartidos

--- a/client/src/components/Admin/Eliminatorias/ListaPartidosYSets.module.css
+++ b/client/src/components/Admin/Eliminatorias/ListaPartidosYSets.module.css
@@ -17,7 +17,8 @@
 }
 
 .table tr th:nth-child(3),
-.table tr td:nth-child(3) {
+.table tr td:nth-child(3),
+.table tr td:nth-child(3) select {
   text-align: end;
 }
 
